2005-09-14  Daniel  <durbano@shbano.com>

	* DLD-FUNCTIONS/besselj.cc, DLD-FUNCTIONS/chol.cc,
	DLD-FUNCTIONS/fft.cc, DLD-FUNCTIONS/fftw_wisdom.cc, utils.cc:
	Doc string fixes.
	From Jorge Barros de Abreu <ficmatin01@solar.com.br>.

2005-09-14  David Bateman  <dbateman@free.fr>

	* help.cc (Flookfor, print_lookfor, first_help_sentence):
	New functions.

2005-09-07  Bill Denney  <denney@seas.upenn.edu>

	* dirfns.cc (Fglob): Doc fix.

2005-09-07  John W. Eaton  <jwe@octave.org>

	* ov-struct.cc (Fstruct): Allow struct (zeros (0, N)) to create a
	0xN struct array.

2005-09-04  David Bateman  <dbateman@free.fr>

	* DLD-FUNCTIONS/colamd.c (COLAMD_NAME, SYMAMD_NAME): New macros
	(symetree, make_set, link, finf, etdfs, TreePostorder, coletree,
	Fcolamd, Fsymamd, Fetree): Update for 64-bit indexing and colamd
	versin 2.4.

2005-09-01  John W. Eaton  <jwe@octave.org>

	* variables.cc (symbol_out_of_date): Don't check nested functions.

2005-08-31  John W. Eaton  <jwe@octave.org>

	* oct-map.cc (Octave_map::index): Don't crash if index list is empty.
	* ov-str-mat.cc (octave_char_matrix_str::do_index_op_internal):
	Likewise. 

	* oct-map.h (Octave_map::ndims): New function.

2005-08-30  John W. Eaton  <jwe@octave.org>

	* ov-range.h (octave_range::permute): New function.

	* ov-struct.cc (octave_struct::load_ascii,
	octave_struct::load_binary, octave_struct::load_hdf5): Try harder
	to read old-style files correctly.

2005-08-25  David Bateman  <dbateman@free.fr>

        * OPERATORS/op-sm-m.cc, OPERATORS/op-sm-cm.cc, OPERATORS/op-scm-m.cc,
	OPERATORS/op-scm-cm.cc, OPERATORS/op-m-sm.cc, OPERATORS/op-m-scm.cc,
	OPERATORS/op-cm-sm.cc, OPERATORS/op-cm-scm.cc: Use mixed matrix/sparse
	multiply operator rather than casting sparse to matrix.

2005-07-18  John W. Eaton  <jwe@octave.org>

	* strfns.cc (Fstrcmp): New function from Soren Hauberg
	<soren@hauberg.org> and Tom Holroyd <tomh@kurage.nimh.nih.gov>.
	Adapt to Octave conventions.

2005-07-11  David Bateman  <dbateman@free.fr>
